Agregado el template 'Mis Equipos'

--- a/usuario/www/client/templates/misequipos.html
+++ b/usuario/www/client/templates/misequipos.html
@@ -2,22 +2,20 @@
 	<ion-content>
 		<div class="list card">
 
-		  <div class="item item-avatar">
-		    <img src="mcfly.jpg">
-		    <h2>Marty McFly</h2>
-		    <p>November 05, 1955</p>
+		  <div class="item item-icon-left">
+		    <i class="icon ion-star"></i>
+		    <h2>Pinocho B</h2>
 		  </div>
 
 		  <div class="item item-body">
-		    <img class="full-image" src="delorean.jpg">
+		    <img class="full-image" src="img/pinocho.jpg">
 		    <p>
-		      This is a "Facebook" styled Card. The header is created from a Thumbnail List item,
-		      the content is from a card-body consisting of an image and paragraph text. The footer
-		      consists of tabs, icons aligned left, within the card-footer.
+		      Formado en 2016 por un grupo de aburridos con el objetivo de hacer una aplicación para la facultad
 		    </p>
 		    <p>
-		      <a href="#" class="subdued">1 Like</a>
-		      <a href="#" class="subdued">5 Comments</a>
+		      <button ng-click="openIntegrantes()" class="button button-full button-positive">
+		      	Ver Integrantes
+		      </button>
 		    </p>
 		  </div>
 
