--- a/usuario/www/client/templates/noticias.html
+++ b/usuario/www/client/templates/noticias.html
@@ -13,19 +13,19 @@
                
            </div>-->
             <a class="item item-thumbnail-left" href="#">
-              <img src="../img/cen2.jpg">
+              <img src="img/cen2.jpg">
               <h2>Video del choque</h2>
               <p>Se difundió un video de cámaras de seguridad en los que se muestra parte del accidente de Centurión y cómo quedaron dos autos tras el impacto que el BMW tuvo con su parte frontal.</p>
             </a>
             
             <a class="item item-thumbnail-left" href="#">
-              <img src="../img/dale.jpg">
+              <img src="img/dale.jpg">
               <h2>D'Ale la Manu</h2>
               <p>El plantel de River se divirtió en la entrada en calor de este lunes realizando unos movientos con pelotas de básquet. Ya sin Ginóbili en el El Alma, ¿el Oveja Hernández le echará el ojo a Andrés D'Alessandro, uno de los que acaparó la atención?</p>
             </a>
             
             <a class="item item-thumbnail-left" href="#">
-              <img src="../img/mezi.jpg">
+              <img src="img/mezi.jpg">
               <h2>Este martes: poster de Leo</h2>
               <p>La Selección volvió a jugar y Messi dijo presente con gol y todo a Venezuela. Y Olé festeja con un poster especial. Pedilo con tu diario del martes.</p>
             </a>
