--- a/usuario/www/client/templates/perfil.html
+++ b/usuario/www/client/templates/perfil.html
@@ -4,7 +4,7 @@
             <div class="col-25"></div>
             <div class="col-50">
                 <div class="row">
-                    <img class="img-perfil" src="../img/VTrEvT4I.jpeg">
+                    <img class="img-perfil" src="img/VTrEvT4I.jpeg">
                 </div>
                 <div style="text-align:center;">
                     <h2>Miguel Piñeyro</h2>
