correciones de vistas scroll

--- a/usuario/www/client/templates/misdatos.html
+++ b/usuario/www/client/templates/misdatos.html
@@ -1,6 +1,6 @@
 <ion-view>
 	<ion-content>
-		<div class="list">
+		<div class="lista">
 
 			<div class="item item-divider" style="text-align:center;">
 			   Datos Personales
@@ -80,3 +80,9 @@
       </ion-content>
    </ion-modal-view>
 </script> -->
+
+<style type="text/css">
+	.list{
+		height: auto;
+	}
+</style>
