--- a/administrador/client/templates/home.html
+++ b/administrador/client/templates/home.html
@@ -16,10 +16,13 @@
         <li><a ui-sref-active="active" ui-sref=".usuarios">Usuarios</a></li>
         <li><a ui-sref-active="active" ui-sref=".canchas">Canchas</a></li>	
         <li><a ui-sref-active="active" ui-sref=".torneos">Torneos</a></li>
-        <li><a ui-sref-active="active" ui-sref=".configuracion">Configuración</a></li>
+        <li><a ui-sref-active="active" ui-sref=".pagos">Pagos</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right" ng-controller="logoutController">
         <li><a ng-click='logout()' href=""><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+      </ul>
+            <ul class="nav navbar-nav navbar-right">
+        <li><a ui-sref-active="active" ui-sref=".configuracion">Configuración</a></li>
       </ul>
     </div>
   </div>
