--- a/administrador/client/templates/index.html
+++ b/administrador/client/templates/index.html
@@ -1,109 +1,226 @@
+<script>
+var app = angular.module('myApp', []);
+myApp.filter('yesNo', function () {
+  return function (boolean) {
+    return boolean ? 'Ok' : 'No';
+  }
+});
+</script>
+
 <h1>Reservas del día</h1>
-<div id="example" class="k-content">
-    <div id="scheduler"></div>
+
+<div id="example">
+    <div ng-controller="schedulerController">
+        <div kendo-scheduler k-options="schedulerOptions">
+            <span k-event-template class='custom-event'>{{dataItem.title}}</span>
+            <div k-all-day-event-template class='custom-all-day-event'>{{dataItem.title}}</div>
+        </div>
+    </div>
+
+
+<script id="customEditorTemplate" type="text/x-kendo-template">
+<!-- notice how the Title is hidden if the event is new -->
+<div class="k-edit-label"><label for="title">User</label></div>
+<div data-container-for="title" class="k-edit-field">
+    <select id="title" data-bind="value:title" data-role="dropdownlist"
+                    data-value-field="value" data-text-field="text" data-filter="contains">
+      <option value="User 1">User 1</option>
+      <option value="User 2">User 2</option>
+      <option value="User 3">User 3</option>
+  </select>
+</div>
+
+<div class="k-edit-label">
+    <label for="start">Inicio</label>
+  </div>
+<div data-container-for="start" class="k-edit-field">
+    <input type="text"
+           data-role="datetimepicker"
+           data-interval="15"
+           data-type="date"
+           data-bind="value:start,invisible:isAllDay"
+           name="start"/>
+    <input type="text" data-type="date" data-role="datepicker" data-bind="value:start,visible:isAllDay" name="start" />
+    <span data-bind="text: startTimezone"></span>
+    <span data-for="start" class="k-invalid-msg" style="display: none;"></span>
+  </div>
+<div class="k-edit-label"><label for="end">Fin</label></div>
+<div data-container-for="end" class="k-edit-field">
+    <input type="text" data-type="date" data-role="datetimepicker" data-bind="value:end,invisible:isAllDay" name="end" data-datecompare-msg="End date should be greater than or equal to the start date" />
+    <input type="text" data-type="date" data-role="datepicker" data-bind="value:end,visible:isAllDay" name="end" data-datecompare-msg="End date should be greater than or equal to the start date" />
+    <span data-bind="text: endTimezone"></span>
+    <span data-bind="text: startTimezone, invisible: endTimezone"></span>
+    <span data-for="end" class="k-invalid-msg" style="display: none;"></span>
+  </div>
+
+<div class="k-edit-label"><label for="recurrenceRule">Repetir</label></div>
+<div data-container-for="recurrenceRule" class="k-edit-field">
+    <div data-bind="value:recurrenceRule" name="recurrenceRule" data-role="recurrenceeditor"></div>
+  </div>
+<div class="k-edit-label"><label for="description">Descripción</label></div>
+<div data-container-for="description" class="k-edit-field">
+    <textarea name="description" class="k-textbox" data-bind="value:description"></textarea>
+  </div>
+
+<div class="k-edit-label"><label for="ownerId">Cancha</label></div>
+    <div data-container-for="ownerId" class="k-edit-field">
+        <select id="ownerId" data-bind="value:ownerId" data-role="dropdownlist"
+                        data-value-field="value" data-text-field="text">
+          <option value="1">Cancha 1</option>
+          <option value="2">Cancha 2</option>
+          <option value="3">Cancha 3</option>
+      </select>
+      </div>
+
+<div class="k-edit-label"><label for="total">Total</label></div>
+<div data-container-for="total" class="k-edit-field">
+    <div class="input-group col-sm-4">
+        <span class="input-group-addon">$</span>
+        <input type="number" class="form-control" id="precio1" >
+    </div>
+</div> 
+
+<div class="k-edit-label"><label for="reserva">Reserva</label></div>
+<div data-container-for="reserva" class="k-edit-field">
+    <div class="input-group col-sm-4">
+        <span class="input-group-addon">$</span>
+        <input type="number" class="form-control" id="reserva" readonly="true" >
+    </div>
+</div> 
+ 
+ 
+  
+  <div class="k-edit-label"><label for="recurrenceRule">Pago</label></div>
+<div data-container-for="recurrenceRule" class="k-edit-field">
+    <label>Efectivo</label>
+    <input type="checkbox" name="efectivo" data-type="boolean" data-bind="checked:efectivo">
+    <div class="btn-group">
+    </div>
+</div>
+
+</script>
+
+<style>
+html
+{
+    font: 12px sans-serif;
+    overflow: hidden;
+}
+
+html,
+body,
+#example,
+#scheduler
+{
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    border-width: 0;
+}
+</style>
+
+
+
+<!-- Modal Pago -->
+<div  class="modal fade" role="dialog" id="pagoTarjeta">
+    <div class="modal-dialog" type="text/x-kendo-template" >
+  <!-- Modal content-->
+    <div class="modal-content" >
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title" align="center">PAGO - TARJETA</h4>
+      </div>
+      <div class="modal-body">
+        <div class="container">
+          <form name="ccForm">
+            <div class="form-group">           
+              <div class="container">
+                <div class="col-sm-6">
+                  <fieldset>
+                    <form name="ccForm">
+                      <div class="control-group">
+                        <label label-default="" class="control-label">NOMBRE TITULAR</label>
+                        <div class="controls">
+                          <div class="row">
+                            <div class="col-md-8">
+                              <input type="text" class="form-control" pattern="\w+ \w+.*" title="Nombre y apellido" required="">
+                              </div>
+                          </div>  
+                        </div>
+                      </div>
+                      <div class="control-group">
+                        <label label-default="" class="control-label">Número de Tarjeta</label>
+                        <div class="controls">
+                          <div class="row">
+                            <div class="col-md-8">
+                              <input type="text" class="form-control" id="cardNumber" cc-number cc-eager-type name="ccNumber" ng-model="card.number" cc-format>
+                            </div>
+                            <div class="col-xs-3">
+                              <label label-default="" class="control-label">{{ccForm.ccNumber.$ccEagerType || 'Unknown'}} : {{ccForm.ccNumber.$valid | yesNo}}</label>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label for="card-number">Expira</label>
+                        <div class="row" cc-exp>
+                          <div class="col-xs-3">
+                            <input placeholder="MM" type="text" class="form-control" cc-exp-month name="ccExpMonth" ng-model="card.expiration.month">
+                          </div>
+                          <div class="col-xs-2">
+                            <input type="text" class="form-control" value="{{ccForm.ccExpMonth.$valid | yesNo}}" readonly>                   
+                          </div>
+                          <div class="col-xs-3">
+                            <input placeholder="AA" type="text" class="form-control" cc-exp-year name="ccExpYear" ng-model="card.expiration.year">
+                          </div>
+                          <div class="col-xs-2">
+                            <input type="text" class="form-control" value="{{ccForm.ccExpYear.$valid | yesNo}}" readonly>                   
+                          </div>
+                        </div>
+                      </div>
+                      <div class="control-group">
+                        <label label-default="" class="control-label">Código Seguridad</label>
+                        <div class="controls">
+                          <div class="row">
+                            <div class="col-md-3">
+                              <input type="text" autocomplete="off" class="form-control" id="cvc" cc-cvc cc-type="ccForm.ccNumber.$ccType" name="ccCvc" ng-model="card.cvc">
+                            </div>
+                            <div class="col-xs-2">
+                              <input type="text" class="form-control" value="{{ccForm.ccCvc.$valid | yesNo}}" readonly>                   
+                            </div>
+                            <div class="col-md-8">
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="control-group">
+                      <label label-default="" class="control-label"></label>
+                      <div class="controls">
+                        <button type="submit" class="btn btn-success">Pagar</button> 
+                        <button type="button" class="btn btn-danger">Cancelar</button>
+                      </div>
+                    </div>
+                  </form>
+                </fieldset>
+                </div>
+              </div>
+            </div>
+          </form>
+        </div>  
+      </div>
+    </div>
+  </div>
 </div>
 
 
-
-<script>
-$(function() {
-    $("#scheduler").kendoScheduler({
-        date: kendo.date.today(),
-        height: 600,
-        views: [
-            { type: "day", selected: true },
-            "week",
-            "month",
-            "agenda",
-            "timeline"
-        ],
-        timezone: "Etc/UTC",
-        dataSource: {
-            batch: true,
-            transport: {
-                read: {
-                    url: "//demos.telerik.com/kendo-ui/service/meetings",
-                    dataType: "jsonp"
-                },
-                update: {
-                    url: "//demos.telerik.com/kendo-ui/service/meetings/update",
-                    dataType: "jsonp"
-                },
-                create: {
-                    url: "//demos.telerik.com/kendo-ui/service/meetings/create",
-                    dataType: "jsonp"
-                },
-                destroy: {
-                    url: "//demos.telerik.com/kendo-ui/service/meetings/destroy",
-                    dataType: "jsonp"
-                },
-                parameterMap: function(options, operation) {
-                    if (operation !== "read" && options.models) {
-                        return {models: kendo.stringify(options.models)};
-                    }
-                }
-            },
-            schema: {
-                model: {
-                    id: "meetingID",
-                    fields: {
-                        meetingID: { from: "MeetingID", type: "number" },
-                        title: { from: "Title", defaultValue: "No title", validation: { required: true } },
-                        start: { type: "date", from: "Start" },
-                        end: { type: "date", from: "End" },
-                        startTimezone: { from: "StartTimezone" },
-                        endTimezone: { from: "EndTimezone" },
-                        description: { from: "Description" },
-                        recurrenceId: { from: "RecurrenceID" },
-                        recurrenceRule: { from: "RecurrenceRule" },
-                        recurrenceException: { from: "RecurrenceException" },
-                        roomId: { from: "RoomID", nullable: true },
-                        attendees: { from: "Attendees", nullable: true },
-                        isAllDay: { type: "boolean", from: "IsAllDay" }
-                    }
-                }
-            }
-        },
-        resources: [
-            {
-                field: "Cancha",
-                dataSource: [
-                    { text: "Cancha 1", value: 1, color: "#6eb3fa" },
-                    { text: "Cancha 2", value: 2, color: "#f58a8a" }
-                ],
-                title: "Room"
-            },
-            {
-                field: "attendees",
-                dataSource: [
-                    { text: "Cancha 1", value: 1, color: "#f8a398" },
-                    { text: "Cancha 2", value: 2, color: "#51a0ed" },
-                    { text: "Cancha 3", value: 3, color: "#56ca85" }
-                ],
-                multiple: true,
-                title: "Attendees"
-            }
-        ]
-    });
-
-    function fitWidget() {
-      var widget = $("#scheduler").data("kendoScheduler");
-      var height = $(window).outerHeight();
-
-      //size widget to take the whole view
-      widget.element.height(height);
-      widget.resize(true);
+<style>
+    .k-widget.k-window{
+        z-index: 5;  top: 1em; left: 8em;
     }
-
-    $(window).resize(function() {
-      clearTimeout(window._resizeId);
-
-      window._resizeId = setTimeout(function() {
-        console.log("resize");
-        fitWidget();
-      }, 500);
-    });
-
-    fitWidget();
-});
-</script>
+    .modal-content{
+        z-index: 15;  top: 5em; left: 5em;
+    }
+    .k-edit-field{
+      baa
+    }
+</style>
