--- a/usuario/www/client/templates/dialogs/detalletorneo.html
+++ b/usuario/www/client/templates/dialogs/detalletorneo.html
@@ -3,34 +3,34 @@
 
 		<md-divider></md-divider>
 		<md-subheader class="md-no-sticky fondoDReserva">Datos Torneo</md-subheader>
-		<div layout="row" layout-align="center center">
-			<div class="col-25" style="text-align:center">
+		<div class="row" layout="row" layout-align="center center">
+			<div class="col-25" style="text-align:center" layout="column">
 				<b>Inicio</b>
 			</div>
 			<div class="col">
-				<md-datepicker ng-model="reserva.fechaInicio" disabled ></md-datepicker>
+				<b>01/10/2016</b>
+			</div>
+			<div class="col-25" style="text-align:center" layout="column">
+			<b>Fín</b>
+			</div>
+			<div class="col">
+				<b>01/12/2017</b>
 			</div>
 		</div>
-
-		<div class="row" layout="row" layout-align="center center">
-			<div class="col-25" layout="column" style="text-align:center">
-				<b>Fín</b>
-			</div>
-			<div class="col" layout="column">
-				<md-datepicker ng-model="reserva.fechaFin" disabled></md-datepicker>
-			</div>
-		</div>
-
-		<md-divider></md-divider>
-		<md-subheader class="md-no-sticky fondoDReserva">Reglas</md-subheader>
 
 		<div class="row" layout="row" layout-align="center center">
 
 			<div class="col-25" style="text-align:center" layout="column">
-				<b>Nombre</b>
+				<b>Jugadores: </b>
 			</div>
 			<div class="col" layout="column">
-				Cancha Nro 3
+				<b>10</b>
+			</div>
+			<div class="col-25" style="text-align:center" layout="column">
+				<b>Inscripción: </b>
+			</div>
+			<div class="col" layout="column">
+				<b>$2000</b>
 			</div>
 
 		</div>
@@ -38,10 +38,16 @@
 		<div class="row" layout="row" layout-align="center center" >
 
 			<div class="col-25" style="text-align:center" layout="column">
-				<label>Tipo</label>
+				<b>Titulares</b>
 			</div>
 			<div class="col" layout="column">
-				Césped sintético
+				<b>6</b>
+			</div>
+			<div class="col-25" style="text-align:center" layout="column">
+				<b>Por partido: </b>
+			</div>
+			<div class="col" layout="column">
+				<b>$500</b>
 			</div>
 
 		</div>
@@ -49,50 +55,128 @@
 		<div class="row" layout="row" layout-align="center center">
 
 			<div class="col-25" style="text-align:center" layout="column">
-				<b>Tamaño</b>
+				<b>Suplente</b>
 			</div>
 			<div class="col" layout="column">
-				7 Jugadores
+				<b>4</b>
+			</div>
+			<div class="col-25" style="text-align:center" layout="column">
+				<b>Formato: </b>
+			</div>
+			<div class="col" layout="column">
+				<b>Liga</b>
 			</div>
 
 		</div>
 
+		<div class="row" layout="row" layout-align="center center">
+
+			<div class="col-25" style="text-align:center" layout="column">
+				<b>Equipos</b>
+			</div>
+			<div class="col" layout="column">
+				<b>10</b>
+			</div>
+
+		</div>
+		<md-divider></md-divider>
+		<md-subheader class="md-no-sticky fondoDReserva">Jugadores</md-subheader>
+		<div class="row" layout="row" layout-align="center center">
+			<div class="col-20" style="text-align:center" layout="column">
+				<b>DNI</b>
+			</div>
+			<div class="col" layout="column">
+				<b>Nombre</b>
+			</div>
+		</div>
+		<div class="row" layout="row" layout-align="center center">
+			<div class="col-20" style="text-align:center" layout="column">
+				<input type="text" style="text-align:center">
+			</div>
+			<div class="col" layout="column">
+				<input type="text" style="text-align:center">
+			</div>
+		</div>
+		<div class="row" layout="row" layout-align="center center">
+			<div class="col-20" style="text-align:center" layout="column">
+				<input type="text" style="text-align:center">
+			</div>
+			<div class="col" layout="column">
+				<input type="text" style="text-align:center">
+			</div>
+		</div>
+		<div class="row" layout="row" layout-align="center center">
+			<div class="col-20" style="text-align:center" layout="column">
+				<input type="text" style="text-align:center">
+			</div>
+			<div class="col" layout="column">
+				<input type="text" style="text-align:center">
+			</div>
+		</div>
+		<div class="row" layout="row" layout-align="center center">
+			<div class="col-20" style="text-align:center" layout="column">
+				<input type="text" style="text-align:center">
+			</div>
+			<div class="col" layout="column">
+				<input type="text" style="text-align:center">
+			</div>
+		</div>
+		<div class="row" layout="row" layout-align="center center">
+			<div class="col-20" style="text-align:center" layout="column">
+				<input type="text" style="text-align:center">
+			</div>
+			<div class="col" layout="column">
+				<input type="text" style="text-align:center">
+			</div>
+		</div>
+		<div class="row" layout="row" layout-align="center center">
+			<div class="col-20" style="text-align:center" layout="column">
+				<input type="text" style="text-align:center">
+			</div>
+			<div class="col" layout="column">
+				<input type="text" style="text-align:center">
+			</div>
+		</div>
+		<div class="row" layout="row" layout-align="center center">
+			<div class="col-20" style="text-align:center" layout="column">
+				<input type="text" style="text-align:center">
+			</div>
+			<div class="col" layout="column">
+				<input type="text" style="text-align:center">
+			</div>
+		</div>
+		<div class="row" layout="row" layout-align="center center">
+			<div class="col-20" style="text-align:center" layout="column">
+				<input type="text" style="text-align:center">
+			</div>
+			<div class="col" layout="column">
+				<input type="text" style="text-align:center">
+			</div>
+		</div>
+		<div class="row" layout="row" layout-align="center center">
+			<div class="col-20" style="text-align:center" layout="column">
+				<input type="text" style="text-align:center">
+			</div>
+			<div class="col" layout="column">
+				<input type="text" style="text-align:center">
+			</div>
+		</div>
+		<div class="row" layout="row" layout-align="center center">
+			<div class="col-20" style="text-align:center" layout="column">
+				<input type="text" style="text-align:center">
+			</div>
+			<div class="col" layout="column">
+				<input type="text" style="text-align:center">
+			</div>
+		</div>
 		<md-divider></md-divider>
 		<md-subheader class="md-no-sticky fondoDReserva">Pago</md-subheader>
 
-		<div class="row" layout="row" layout-align="center center">
 
-			<div class="col-25" style="text-align:center" layout="column">
-				<b>Importe Total</b>
-			</div>
-			<div class="col" layout="column">
-				{{reserva.precio}}
-			</div>
-
-		</div>
-
-		<div class="row" layout="row" layout-align="center center">
-
-			<div class="col-25" style="text-align:center" layout="column">
-				<b>Pagado</b>
-			</div>
-			<div class="col" layout="column">
-				{{reserva.pagado}}
-			</div>
-
-		</div>
 
 		<div class="row" layout="row" layout-align="center center" ng-hide="reserva.importeAdeudado <= 0">
-
-			<div class="col-25" style="text-align:center" layout="column">
-				<b>Deuda:</b>
-			</div>
 			<div class="col" layout="column">
-				{{reserva.importeAdeudado}}
-			</div>
-
-			<div class="col" layout="column">
-				<button class="button button-positive" ng-click="openPago()">Pagar</button>
+				<button class="button button-positive" ng-click="openPago()">Pagar con tarjeta</button>
 			</div>
 
 		</div>
