--- a/usuario/www/client/templates/torneos.html
+++ b/usuario/www/client/templates/torneos.html
@@ -14,9 +14,9 @@
                     <strong>Tipo de Torneo</strong>: Liguilla -
                     <strong>Fecha de Inicio</strong>: 24/09/2016</p>
             </div>
-            <a href="#/instorneo">
-            <button id="canchas-button1" class="button button-positive  button-block" href="#inscrpcionTorneo">Inscribirse</button>
-            </a>
+            
+            <button id="canchas-button1" class="button button-positive  button-block" ng-click="openTorneo()">Inscribirse</button>
+            
         </div>
         <div class="list card" id="canchas-card22">
             <ion-item class="item-icon-right" id="canchas-list-item3">Torneo Clausura
@@ -32,7 +32,7 @@
                     <strong>Tipo de Torneo</strong>: Eliminación -
                     <strong>Fecha de Inicio</strong>: 24/09/2016</p>
             </div>
-            <button id="canchas-button4" class="button button-positive  button-block" href="#inscrpcionTorneo">Inscribirse</button>
+            <button id="canchas-button4" class="button button-positive  button-block" ng-click="openTorneo()">Inscribirse</button>
         </div>
     </ion-content>
 </ion-view>
