--- a/usuario/www/client/templates/login.html
+++ b/usuario/www/client/templates/login.html
@@ -17,7 +17,7 @@
                     <button type="submit" class="button button-positive" ng-disabled="disabled">Iniciar</button>
                 </div>    
                 <div class="form-group-conf" align="center">
-                    <a class="form-group-conf" ui-sref="resetpass" role="button" href='#/resetcontraseña'><h4 class="loginText"><B>Restablecer contraseña</B></h4></a>
+                    <a class="form-group-conf" ui-sref="resetpass" role="button" ><h4 class="loginText"><B>Restablecer contraseña</B></h4></a>
                 </div>
             </form>
         </div>
