arreglo del fondo

--- a/usuario/www/client/templates/contacto.html
+++ b/usuario/www/client/templates/contacto.html
@@ -33,7 +33,11 @@
     }
 
     .pane, .view {
-        background-image: url("./img/1.jpg");
+        background: url("./img/1.jpg") no-repeat center center fixed;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
 
     }
     .img-perfil{
