--- a/usuario/www/client/templates/perfil.html
+++ b/usuario/www/client/templates/perfil.html
@@ -45,6 +45,11 @@
         font-weight: bolder;
     }
     .pane, .view {
+        background: url("./img/1.jpg") no-repeat center center fixed;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
         background-image: url("./img/1.jpg");
 
     }
