mod template reserva

--- a/usuario/www/client/templates/dialogs/reserva.html
+++ b/usuario/www/client/templates/dialogs/reserva.html
@@ -68,10 +68,15 @@
   				<div layout="column" flex="33">
 					<md-input-container>
 				        <label style="border-color: white; color: white; font-weight:bold;">Importe total</label>
-				        <input style="border-color: white; color: white; background-color: transparent; font-weight:bold;" disabled value="$500.00">
+				        <input style="width: 100px; border-color: white; color: white; background-color: transparent; font-weight:bold;" disabled value="$500.00">
 			      	</md-input-container>
   				</div>
-  				<div layout="column"  flex="33"></div>
+  				<div layout="column"  flex="33">
+  					<md-input-container>
+				        <label style="border-color: white; color: white; font-weight:bold;">Importe reserva</label>
+				        <input style="width: 100px; border-color: white; color: white; background-color: transparent; font-weight:bold;" disabled value="$100.00">
+			      	</md-input-container>
+  				</div>
 
   				<div layout="column" flex="33">
 					<button style="margin-top:15px" 
